--- a/beginnerCss.html
+++ b/beginnerCss.html
@@ -76,7 +76,7 @@ h1,h2,p{
                             </pre>            
 </dd>
            </dl>
-   <hr>
+  
         </div>
         <div class ="selector" >
             <h1 id="c3">HOW TO DO</h1>
@@ -95,13 +95,20 @@ The internal style is defined inside the &ltstyle&gt element, inside the head se
                 <dd>An inline style may be used to apply a unique style for a single element.
 
                     To use inline styles, add the style attribute to the relevant element. The style attribute can contain any CSS property.</dd>
-            </dl>
-            <dt>3. EXTERNAL CSS</dt>
-            <dd>
-                With an external style sheet, you can change the look of an entire website by changing just one file!
-Each HTML page must include a reference to the external style sheet file inside the element, inside the head section.
-            </dd>
+          <br>
+                    <dt>1. EXTERNAL  CSS</dt>
+                    <dd>
+                        <br>
+                        <br>
+                        With an external style sheet, you can change the look of an entire website by changing just one file!
+
+                        Each HTML page must include a reference to the external style sheet file inside the &ltlink&gt element, inside the head section.
+                    </dd>
+                    <br>
+             </dl>
+         <hr>  
         </div>
+    
        
 
     </body>
