--- a/beginnerCss.html
+++ b/beginnerCss.html
@@ -24,9 +24,9 @@
             <h1>INTRODUCTION TO CSS</h1>
             <p>Cascading Style Sheets is a style sheet language used for describing the
                  presentation of a document written in a markup language such as HTML. 
-                 CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. 
+                 CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. nxczzvxcvbsbdkfc bsxvsd,vxjdh,vvbjvajjoispfji
             </p>
-            <img src="https://sabe.io/classes/css/hero.png">
+            <img src="https://sabe.io/classes/css/hero.png" style="float: left;">
         </div>
         <hr style="width: 100%;">
         <div class ="selector" >
@@ -164,8 +164,6 @@ The internal style is defined inside the &ltstyle&gt element, inside the head se
                     </ol>
                 </dd>
             </dl>
-
-         
         </div>
         <hr style="width:100%">
         <div class="text">
