adding position style

--- a/beginnerCss.html
+++ b/beginnerCss.html
@@ -24,9 +24,9 @@
             <h1>INTRODUCTION TO CSS</h1>
             <p>Cascading Style Sheets is a style sheet language used for describing the
                  presentation of a document written in a markup language such as HTML. 
-                 CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. nxczzvxcvbsbdkfc bsxvsd,vxjdh,vvbjvajjoispfji
+                 CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. 
             </p>
-            <img src="https://sabe.io/classes/css/hero.png" style="float: left;">
+            <img src="https://sabe.io/classes/css/hero.png">
         </div>
         <hr style="width: 100%;">
         <div class ="selector" >
@@ -160,6 +160,8 @@ The internal style is defined inside the &ltstyle&gt element, inside the head se
                         <br>
                         <span style="letter-spacing: -5px;">this is letter spacing with -5px</span>
                     </p>
+                    <li><h3>Text Shadow</h3></li>
+                    <p style="text-shadow: 5px 5px 10px black;font-size: 5vw;margin-left: 20%;">text shadow</p>
 
                     </ol>
                 </dd>
@@ -167,16 +169,25 @@ The internal style is defined inside the &ltstyle&gt element, inside the head se
         </div>
         <hr style="width:100%">
         <div class="text">
-            <h1>Font</h1>
+            <h1>FONT</h1>
             <h3>text below is small-caps in font-variant</h3>
             <h3 style="font-variant: small-caps;">Text Below Is smAll-caPs In fOnt-vAriaNt</h3>
         </div>
         <hr style="width:100%">
         <div class="text">
-            <h1>Link</h1>
+            <h1>LINK</h1>
             <a href="beginnerCss.html" target="_blank">click the link below</a>
+            <br>
+            <br>
         </div>
         <hr style="width:100%">
+        <div class="text">
+            <h1>POSITION</h1>
+        </div>
+        <iframe src="sticky.html" width="80%" height=450px></iframe>
+        <hr style="width:100%">
+
+
 
     </body>
 </html>
