--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@ next few line are example of class</p>
 <iframe src="https://en.wikipedia.org" width="1400px" height="700px" style="border: 2px solid red; width: 100%;" title="Iframe Example"></iframe>
     <br>
 <hr>
+<iframe href=""></iframe>
 
 
     </body>
